# caut-erl-ref

./: .gitignore  LICENSE  Makefile  README.md  caut-erl-ref.cabal  rebar3  run_crucible.sh  stack.yaml
app/: Main.hs
app/Cauterize/ErlangRef/: Options.hs
crucible/: crucible.erl
priv/: .erlang_test.scm.swp  erlang_test.scm  erlang_test.spec
src/: cauterize.app.src  cauterize.erl
src/Cauterize/ErlangRef/: Generate.hs
static/: cauterize.erl
test/: cauterize_schema_test.erl  primitive_test.erl
